--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "@ant-design/icons": "^6.0.0",
+    "@tanstack/react-query": "^5.79.0",
     "antd": "^5.25.1",
     "axios": "^1.9.0",
+    "dayjs": "^1.11.13",
     "firebase": "^11.7.3",
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
